--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ python:
 - "3.4"
 install:
 - pip install pipenv
-- pipenv install
-script: pipenv python tests.py
+script: pipenv run python tests.py
 env:
 - FLASK_VERSION=0.10.1
