using json api instead of xml

--- a/Pipfile
+++ b/Pipfile
@@ -19,3 +19,8 @@ wordpress-api = "*"
 python-wordpress-xmlrpc = "*"
 passlib = "*"
 "unittest2" = "*"
+colorama = "*"
+xmlrpc = "*"
+python-wordpress = "*"
+requests-oauthlib = "*"
+wordpress-json = "*"
