minify html with flask package

--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,11 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+
 [requires]
+
 python_full_version = "2.7.10"
+
 
 [dev-packages]
 
@@ -32,3 +35,4 @@ flask-wtf = "*"
 wtforms = "*"
 requests = "*"
 sqlalchemy-migrate = "*"
+flask-htmlmin = "*"
