--- a/app/static/js/package.json
+++ b/app/static/js/package.json
@@ -22,6 +22,7 @@
     "gulp-connect": "^5.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "run-sequence": "^2.2.1"
   }
 }
