--- a/app/static/js/package.json
+++ b/app/static/js/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/thechad12/wordpress-wrapper#readme",
   "dependencies": {
+    "browserify": "^16.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
     "http": "0.0.0",
+    "lodash": "^4.17.5",
     "run-sequence": "^2.2.1"
   }
 }
