add manager for db migrates

--- a/Pipfile
+++ b/Pipfile
@@ -37,3 +37,6 @@ requests = "*"
 sqlalchemy-migrate = "*"
 flask-htmlmin = "*"
 raven = {extras = ["flask"]}
+gunicorn = "*"
+flask-migrate = "*"
+flask-script = "*"
