--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,7 @@ parse = "*"
 "psycopg2-binary" = "*"
 flask-wtf = "*"
 flask-session = "*"
+simple-crypt = "*"
 
 [pipenv]
 allow_prereleases = true
